classDiagram
    %% Main Entry Points
    class NearbyConnections {
        <<static>>
        +Configure(Action~NearbyConnectionsOptions~) void
        +Default INearbyConnections
    }

    %% Core Interface
    class INearbyConnections {
        <<interface>>
        +Events IObservable~INearbyConnectionsEvent~
        +IsAdvertising bool
        +IsDiscovering bool
        +Devices IReadOnlyDictionary~string, NearbyDevice~
        +DefaultOptions NearbyConnectionsOptions
        +StartAdvertisingAsync(AdvertiseOptions?, CancellationToken) Task
        +StartDiscoveryAsync(DiscoverOptions?, CancellationToken) Task
        +StopAdvertisingAsync() Task
        +StopDiscoveryAsync() Task
        +SendInvitation(NearbyDevice, CancellationToken) Task
        +Dispose() void
    }

    %% Configuration
    class NearbyConnectionsOptions {
        +AdvertiserOptions AdvertiseOptions
        +DiscovererOptions DiscoverOptions
        +EventPublisher EventPublisherOptions
        +AutoAcceptConnections bool
        +DiscoveryTimeoutSeconds int
        +AdvertisingTimeoutSeconds int
    }

    class AdvertiseOptions {
        +DisplayName string
        +ServiceName string
        +AdvertisingInfo IDictionary~string, string~
    }

    class DiscoverOptions {
        +ServiceName string
    }

    class EventPublisherOptions {
        +EnableCorrelation bool
        +EnableDeduplication bool
        +DeduplicationWindowMs int
        +MaxBufferSize int
        +AddEventProcessor(Func~IServiceProvider, IEventProcessor~) EventPublisherOptions
        +AddEventProcessor~TProcessor~() EventPublisherOptions
        +AddEventProcessor(IEventProcessor) EventPublisherOptions
    }

    %% Device Model
    class NearbyDevice {
        <<interface>>
        +Id string
        +DisplayName string
        +Status NearbyDeviceStatus
    }

    class NearbyDeviceStatus {
        <<enumeration>>
        Disconnected
        Discovered
        Invited
        Connected
    }

    %% Events
    class INearbyConnectionsEvent {
        <<interface>>
        +EventId string
        +Timestamp DateTimeOffset
    }

    class NearbyDeviceFound {
        +EventId string
        +Timestamp DateTimeOffset
        +Device NearbyDevice
    }

    class NearbyDeviceLost {
        +EventId string
        +Timestamp DateTimeOffset
        +Device NearbyDevice
    }

    class InvitationReceived {
        +EventId string
        +Timestamp DateTimeOffset
        +From NearbyDevice
    }

    class InvitationAnswered {
        +EventId string
        +Timestamp DateTimeOffset
        +From NearbyDevice
    }

    class NearbyDeviceDisconnected {
        +EventId string
        +Timestamp DateTimeOffset
        +Device NearbyDevice
    }

    %% Relationships
    NearbyConnections --> INearbyConnections : provides
    INearbyConnections --> NearbyConnectionsOptions : configured by
    INearbyConnections --> NearbyDevice : manages
    INearbyConnections --> INearbyConnectionsEvent : emits

    NearbyConnectionsOptions *-- AdvertiseOptions
    NearbyConnectionsOptions *-- DiscoverOptions
    NearbyConnectionsOptions *-- EventPublisherOptions

    NearbyDevice --> NearbyDeviceStatus : has

    INearbyConnectionsEvent <|.. NearbyDeviceFound : implements
    INearbyConnectionsEvent <|.. NearbyDeviceLost : implements
    INearbyConnectionsEvent <|.. InvitationReceived : implements
    INearbyConnectionsEvent <|.. InvitationAnswered : implements
    INearbyConnectionsEvent <|.. NearbyDeviceDisconnected : implements

    NearbyDeviceFound --> NearbyDevice : contains
    NearbyDeviceLost --> NearbyDevice : contains
    InvitationReceived --> NearbyDevice : from
    InvitationAnswered --> NearbyDevice : from
    NearbyDeviceDisconnected --> NearbyDevice : contains
